added all index content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 
   <!-- This <div> is just so each button will be on its own line -->
   <div>
-    <a class="btn" href="#">Primary button</a>
+    <a class="primbtn" href="#">Primary button</a>
+    <a class="subbtn" href="#">Subtle button</a>
+    <a class="ghobtn" href="#">Ghost button</a>
+    <a class="wrnbtn" href="#">Warning button </a>
+    <a class="pribtnsm" href="#">Primary button small</a>
+    <a class="subbtnsm" href="#">Subtle button small</a>
+    <a class="ghobtnsm" href="#">Ghost button small</a>
+    <a class="wrnbtnsm" href="#">Warning button small</a>
+    <a class="primbtnbg" href="#">Primary button big</a>
+    <a class="subbtnbg" href="#">Subtle button big</a>
+    <a class="ghobtnbg" href="#">Ghost button big</a>
+    <a class="wrnbtnbg" href="#">Warning button big</a>
   </div>
 
   <!-- Add all other button styles here with both the <div> & <a> tags -->
