renamed class to what is expected

--- a/index.html
+++ b/index.html
@@ -7,24 +7,21 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
-  <!-- This <div> is just so each button will be on its own line -->
   <div>
-    <a class="primbtn" href="#">Primary button</a>
-    <a class="subbtn" href="#">Subtle button</a>
-    <a class="ghobtn" href="#">Ghost button</a>
-    <a class="wrnbtn" href="#">Warning button </a>
-    <a class="pribtnsm" href="#">Primary button small</a>
-    <a class="subbtnsm" href="#">Subtle button small</a>
-    <a class="ghobtnsm" href="#">Ghost button small</a>
-    <a class="wrnbtnsm" href="#">Warning button small</a>
-    <a class="primbtnbg" href="#">Primary button big</a>
-    <a class="subbtnbg" href="#">Subtle button big</a>
-    <a class="ghobtnbg" href="#">Ghost button big</a>
-    <a class="wrnbtnbg" href="#">Warning button big</a>
+    <ul>
+    <li><a class="btn btn-primary" href="#">Primary button</a></li>
+    <li><a class="btn btn-subtle" href="#">Subtle button</a></li>
+    <li><a class="btn btn-ghost" href="#">Ghost button</a></li>
+    <li><a class="btn btn-warning" href="#">Warning button </a></li>
+    <li><a class="btn btn-primary btn-small" href="#">Primary button small</a></li>
+    <li><a class="btn btn-subtle btn-small" href="#">Subtle button small</a></li>
+    <li><a class="btn btn-ghost btn-small" href="#">Ghost button small</a></li>
+    <li><a class="btn btn-warning btn-small" href="#">Warning button small</a></li>
+    <li><a class="btn btn-primary btn-big" href="#">Primary button big</a></li>
+    <li><a class="btn btn-subtle btn-big" href="#">Subtle button big</a></li>
+    <li><a class="btn btn-ghost btn-big" href="#">Ghost button big</a></li>
+    <li><a class="btn btn-warning btn-big" href="#">Warning button big</a></li>
+    </ul>
   </div>
-
-  <!-- Add all other button styles here with both the <div> & <a> tags -->
-
 </body>
 </html>
