trying to remake buttons without list tag

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div>
-    <ul>
-      <li><a class="btn btn-primary" href="#">Primary button</a></li>
+    <a class="btn btn-primary" href="#">Primary button</a>
+  </div>
       <li><a class="btn btn-subtle" href="#">Subtle button</a></li>
       <li><a class="btn btn-ghost btn-border" href="#">Ghost button</a></li>
       <li><a class="btn btn-warning" href="#">Warning button </a></li>
