--- a/index.html
+++ b/index.html
@@ -10,18 +10,50 @@
   <div>
     <a class="btn btn-primary" href="#">Primary button</a>
   </div>
-      <li><a class="btn btn-subtle" href="#">Subtle button</a></li>
-      <li><a class="btn btn-ghost btn-border" href="#">Ghost button</a></li>
-      <li><a class="btn btn-warning" href="#">Warning button </a></li>
-      <li><a class="btn btn-primary btn-small" href="#">Primary button small</a></li>
-      <li><a class="btn btn-subtle btn-small" href="#">Subtle button small</a></li>
-      <li><a class="btn btn-ghost btn-small btn-border" href="#">Ghost button small</a></li>
-      <li><a class="btn btn-warning btn-small" href="#">Warning button small</a></li>
-      <li><a class="btn btn-primary btn-big" href="#">Primary button big</a></li>
-      <li><a class="btn btn-subtle btn-big" href="#">Subtle button big</a></li>
-      <li><a class="btn btn-ghost btn-big btn-border" href="#">Ghost button big</a></li>
-      <li><a class="btn btn-warning btn-big" href="#">Warning button big</a></li>
-    </ul>
+
+  <div>
+    <a class="btn btn-subtle" href="#">Subtle button</a>
   </div>
+
+  <div>
+    <a class="btn btn-ghost btn-border" href="#">Ghost button</a>
+  </div>
+
+  <div>
+    <a class="btn btn-warning" href="#">Warning button </a>
+  </div>
+
+  <div>
+    <a class="btn btn-primary btn-small" href="#">Primary button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-subtle btn-small" href="#">Subtle button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-ghost btn-small btn-border" href="#">Ghost button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-warning btn-small" href="#">Warning button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-primary btn-big" href="#">Primary button big</a>
+  </div>
+
+  <div>
+    <a class="btn btn-subtle btn-big" href="#">Subtle button big</a>
+  </div>
+
+  <div>
+    <a class="btn btn-ghost btn-big btn-border" href="#">Ghost button big</a>
+  </div>
+
+  <div>
+    <a class="btn btn-warning btn-big" href="#">Warning button big</a>
+  </div>
+
 </body>
 </html>
